--- a/source/editor/plugins/colibri/styles/workbench.css
+++ b/source/editor/plugins/colibri/styles/workbench.css
@@ -63,9 +63,9 @@ label {
     display: grid;
     grid-template-columns: 1fr auto 1fr;
     grid-template-rows: auto;
-    padding: 3px;
-    padding-top: 5px;
-    padding-bottom: 0px;
+    align-items: center;
+    padding: 0px;
+    padding-left: 5px;    
 }
 
 .MainToolbarLeftArea {}
